{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 25,
  "lineage": "517ff677-bcfe-a2d8-4cf5-0383659670fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07b81039556bf92bf",
            "owner_id": "753788210905",
            "tags": {
              "Name": "Dev1 interenet gateway"
            },
            "vpc_id": "vpc-016ff646b65aaeb06"
          },
          "depends_on": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06bf1193332075d9b",
            "owner_id": "753788210905",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b81039556bf92bf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Managed by terraform module"
            },
            "vpc_id": "vpc-016ff646b65aaeb06"
          }
        }
      ]
    },
    {
      "module": "module.subnet_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08c8ec971ebd8d296",
            "owner_id": "753788210905",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b81039556bf92bf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Managed by terraform module"
            },
            "vpc_id": "vpc-016ff646b65aaeb06"
          }
        }
      ]
    },
    {
      "module": "module.subnet_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0886cfa93a76f4d43",
            "route_table_id": "rtb-06bf1193332075d9b",
            "subnet_id": "subnet-096ca0fbdd615b442"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0843c398395821839",
            "route_table_id": "rtb-08c8ec971ebd8d296",
            "subnet_id": "subnet-0947c3a9e4e5cf898"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:753788210905:subnet/subnet-096ca0fbdd615b442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-096ca0fbdd615b442",
            "map_public_ip_on_launch": false,
            "owner_id": "753788210905",
            "tags": {
              "Description": "Managed by terraform",
              "Name": "Public subnet for vpc"
            },
            "vpc_id": "vpc-016ff646b65aaeb06"
          }
        }
      ]
    },
    {
      "module": "module.subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:753788210905:subnet/subnet-0947c3a9e4e5cf898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0947c3a9e4e5cf898",
            "map_public_ip_on_launch": false,
            "owner_id": "753788210905",
            "tags": {
              "Description": "Managed by terraform",
              "Name": "Public subnet for vpc"
            },
            "vpc_id": "vpc-016ff646b65aaeb06"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:753788210905:vpc/vpc-016ff646b65aaeb06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022dbc4ca06cfe809",
            "default_route_table_id": "rtb-030492a8b2b759b6a",
            "default_security_group_id": "sg-07374fe89fa13fbeb",
            "dhcp_options_id": "dopt-48ee8e21",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-016ff646b65aaeb06",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-030492a8b2b759b6a",
            "owner_id": "753788210905",
            "tags": {
              "Name": "dev1_vpc"
            }
          }
        }
      ]
    }
  ]
}